[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version = "0.5.0", features = ["bench"] }
grid = "0.9.0"
itertools = "0.10.5"
pathfinding = "4.1.1"
regex = "1.7.0"
